tests/ui/impl-maybe-const-trait.stderr
error: expected identifier
 --> tests/ui/impl-maybe-const-trait.rs:7:16
  |
7 | #[penum[ (impl ~Sized) ]]
  |                ^
